# pocketlog-importer

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  contract.yml  dev.yml  test.yml
bank_importer/: __main__.py  cli.py  config.py  logging_config.py  notify.py  parsing.py  pipeline.py  rules.py  scheduler.py
bank_importer/exporters/: __init__.py  pocketlog.py
bank_importer/parsers/: __init__.py
config/: config.example.yaml  rules.example.yaml
docker/: Dockerfile  docker-compose.example.yml  docker-entrypoint.sh
pocketlog_importer/: __init__.py  __main__.py  cli.py  config.py  health.py  logging_config.py  models.py  notify.py  pipeline.py  rules.py
pocketlog_importer/exporters/: pocketlog.py
pocketlog_importer/parsers/: base.py  dadat.py  easybank.py
tests/: conftest.py  test_config.py  test_exporter_csv.py  test_health.py  test_logging.py  test_notify.py  test_parsers.py  test_parsing.py  test_pipeline.py  test_pocketlog_client.py  test_rules.py
tests/fixtures/: dadat_sample.csv  easybank_sample.csv
tests/integration/: conftest.py  test_pocketlog_contract.py
